[tool.poetry]
name = "meme-generator"
version = "0.0.17"
description = "Python package for making fun pictures"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MeetWq/meme-generator"
repository = "https://github.com/MeetWq/meme-generator"
exclude = [
    "meme_generator/memes/**/*.jpg",
    "meme_generator/memes/**/*.png",
    "meme_generator/memes/**/*.gif",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<1.0.0"
loguru = ">=0.6.0,<1.0.0"
pil-utils = "^0.1.8"
toml = "^0.10.2"
fastapi = ">=0.93.0,<1.0.0"
uvicorn = ">=0.20.0,<1.0.0"
python-multipart = "^0.0.6"
filetype = "^1.2.0"
rich = "^13.0.0"
dateparser = "^1.1.0"
typing-extensions = ">=4.0.0,<5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[tool.poetry.scripts]
meme = "meme_generator.cli:main"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff.isort]
detect-same-package = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
